src/app/alert/alert.component.scss
.alert-container {
    margin: 50px 0;
    position: fixed;
    z-index: 1001;
    width: 100%;
    padding: 0;

    @media(min-width: 768px) {
      & {
        margin-top: 100px;
      }
    }
    
    @media(min-width: 992px) {
      & {
        margin-top: 50px;
      }
    }

    .row {
        margin: 0;
    }
}

.col-alert {
    position: relative;
    padding: 0;
}

.remove-alert {
    position: absolute;
    right: 40px;
    top: 50%;
    transform: translateY(-50%);
    color: grey;
}

.app-alert {
    padding: 10px 15px;
    text-align: center;
    box-shadow: 
      0px 1px 1px -2px rgba(0, 0, 0, 0.2), 
      0px 2px 2px 0px rgba(0, 0, 0, 0.14), 
      0px 1px 5px 0px rgba(0, 0, 0, 0.12);
}

